phone bug black

--- a/style.css
+++ b/style.css
@@ -1175,3 +1175,9 @@ section {
     margin-bottom: 6px; /* give space between icon & text */
   }
 }
+
+.phone-link {
+  color: white !important;
+  text-decoration: none !important;
+  -webkit-text-fill-color: white !important; /* iPhone fix */
+}
