phone bug black2

--- a/style.css
+++ b/style.css
@@ -1181,3 +1181,6 @@ section {
   text-decoration: none !important;
   -webkit-text-fill-color: white !important; /* iPhone fix */
 }
+.my_Phone {
+  color: black;
+}
